--- a/examples/example.css
+++ b/examples/example.css
@@ -41,3 +41,14 @@ p {
 #nav .next {
     float: right;
 }
+
+/*
+.jqtree-tree .loading > div > a.jqtree-toggler {
+    background-image: url(spinner.gif);
+    background-repeat: no-repeat;
+}
+*/
+.jqtree-tree .loading > div .jqtree-title:after {
+    content: url(spinner.gif);
+    margin-left: 8px;
+}
